src/test/deca/context/invalid/provided/test_type_convfloat.deca
//Resultats :
//Erreur contextuelle
//Ligne 6 : Right value doesn't match the expected type
{
    int x = 5;
    x = readFloat();
}
